<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">Seafile</string>
    <string name="app_url" translatable="false">http://seafile.com</string>
    <string name="welcome_to_seafile">Welcome to Seafile</string>
    <string name="select_account">Choose an account to start</string>
    <string name="edit_account">Edit</string>
    <string name="ignore">Ignore</string>
    <string name="delete_account">Delete</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="delete_repo">Are you sure you want to delete this library?</string>
    <string name="delete_file">Are you sure you want to delete this file or folder?</string>
    <string name="delete_records">Are you sure you want to delete records?</string>
    <string name="delete_wiki_tip">Are you sure you want to delete this wiki?</string>
    <string name="unpublish_wiki_tip">Are you sure you want to unpublish?</string>
    <string name="delete_records_and_file">Are you sure you want to delete records and locally downloaded file?</string>
    <string name="delete_successful">Successfully deleted</string>
    <string name="delete_repo_title">Delete library</string>
    <string name="delete_wiki_title">Delete Wiki</string>
    <string name="delete_file_f">Delete file</string>
    <string name="delete_local_file_sametime">Delete local files at the same time</string>
    <string name="recover_library">Recover library</string>
    <string name="recover_file">Recover file</string>
    <string name="move_file">Move file</string>
    <string name="update_file">Update file</string>
    <string name="recover_folder">Recover folder</string>
    <string name="move_folder">Move folder</string>
    <string name="delete_dir">Delete folder</string>
    <string name="name_hint">Name</string>
    <string name="server">Server</string>
    <string name="server_hint">Server address</string>
    <string name="email_hint">Email or Username</string>
    <string name="passwd_hint">Password</string>
    <string name="passwd_min_len_limit_hint">Password (at least %d characters)</string>
    <string name="passwd_confirmation_hint">Password again</string>
    <string name="login">Log In</string>
    <string name="open_file">Open</string>
    <string name="download_file">Download</string>
    <string name="redownload_file">Download again</string>
    <string name="cancel_download">Cancel</string>
    <string name="unknown_file_type">Unknown file-type</string>
    <string name="activity_not_found">Can\`t find App to open this file</string>
    <string name="refresh">Refresh</string>
    <string name="add_account">Add Account</string>
    <string name="personal">Personal</string>
    <string name="shared">Shared</string>
    <string name="libraries">Libraries</string>
    <string name="my_libraries">My Own Libraries</string>
    <string name="my_wiki">My Wikis</string>
    <string name="my_wiki_of_shared">Shared</string>
    <string name="my_wiki_of_old">Old</string>
    <string name="cached">Cached</string>
    <string name="activities">Activities</string>
    <string name="pick_upload_type">Upload</string>
    <string name="accounts_https_hint" translatable="false">https</string>
    <string name="transfer_tasks">Transfer List</string>
    <string name="accounts">Accounts</string>
    <string name="settings">Settings</string>
    <string-array name="pick_upload_array">
        <item>File</item>
        <item>Photos/Videos</item>
        <item>Other</item>
    </string-array>
    <string name="choose_server">Choose a Seafile Server</string>
    <string-array name="choose_server_array">
        <item>Single Sign-On</item>
        <item>Other Seafile Server</item>
    </string-array>
    <string name="server_name_top" translatable="false">cloud.seafile.com</string>
    <string name="server_url_seacloud" translatable="false">https://cloud.seafile.com</string>
    <string name="network_down">No network connection</string>
    <string name="unknow_error">Unknown error</string>
    <string name="invalid_server_address">Invalid server address</string>
    <string name="err_server_andress_empty">Server address can\`t be empty</string>
    <string name="err_email_empty">Email can\`t be empty</string>
    <string name="err_passwd_empty">Password can\`t be empty</string>
    <string name="err_passwd_too_short">Password is too short</string>
    <string name="err_passwd_mismatch">The passwords don\`t match</string>
    <string name="err_login_failed">Login failed</string>
    <string name="err_wrong_user_or_passwd">Email or password error</string>
    <string name="err_token_expired">Authentication expired, please login again</string>
    <string name="upload_file">Upload file</string>
    <string name="upload">Upload</string>
    <string name="uploaded">Uploaded</string>
    <string name="re_upload">Upload again</string>
    <string name="updated">Updated</string>
    <string name="download_failed">Download failed</string>
    <string name="download_waiting">Download waiting</string>
    <string name="download_finished">Download finished</string>
    <string name="download_completed">Download completed</string>
    <string name="download_cancelled">Download cancelled</string>
    <string name="task_cancel">Cancel</string>
    <string name="task_retry">Retry</string>
    <string name="task_remove">Remove</string>
    <string name="task_remove_all_cancelled">Remove all cancelled tasks</string>
    <string name="task_remove_all_finished">Remove all finished tasks </string>
    <string name="repo_action_delete">Delete</string>
    <string name="repo_action_rename">Rename</string>
    <string name="file_action_star">Star</string>
    <string name="file_action_download">Download</string>
    <string name="file_action_update">Upload</string>
    <string name="file_share">Share</string>
    <string name="file_action_share_wechat">Share to WeChat</string>
    <string name="file_action_share_link">Share link</string>
    <string name="file_action_share_encrypt">Share link with password</string>
    <string name="file_action_export">Export</string>
    <string name="file_action_open">Open with</string>
    <string name="file_action_save_as">Save as</string>
    <string name="file_action_delete">Delete</string>
    <string name="file_action_rename">Rename</string>
    <string name="file_action_copy">Copy</string>
    <string name="file_action_move">Move</string>
    <string name="file_action_open_as">Open as</string>
    <string name="file_action_profile">Profile</string>
    <string name="file_action_more">More</string>
    <string name="file_action_more_title">Choose your preferred option</string>
    <string-array name="file_action_more_array">
        <item>Export</item>
        <item>Copy</item>
        <item>Move</item>
        <item>Star</item>
    </string-array>
    <string-array name="file_type_array">
        <item>Text</item>
        <item>Audio</item>
        <item>Video</item>
        <item>Image</item>
        <item>Other</item>
    </string-array>
    <string name="select">Select</string>
    <string name="add_repo">New Library</string>
    <string name="create_new_file">Create a new file</string>
    <string name="create_new_dir">Create a new folder</string>
    <string name="take_photo">Take photo</string>
    <string name="tabs_library">Libraries</string>
    <string name="tabs_activity">Activities</string>
    <string name="tabs_starred">Starred</string>
    <string name="settings_account">Account</string>
    <string name="settings_account_info_title">User info</string>
    <string name="settings_account_info_load_data">loading…</string>
    <string name="settings_account_space_title">Space used</string>
    <string name="settings_account_sign_out_title">Sign out</string>
    <string name="settings_account_sign_out_hint">Click to sign out</string>
    <string name="security">Security</string>
    <string name="gesture_lock">Gesture Lock</string>
    <string name="gesture_lock_on">Gesture lock on</string>
    <string name="gesture_lock_off">Gesture lock off</string>
    <string name="settings_camera_upload_info_title">Camera Photo Upload</string>
    <string name="settings_camera_upload_service_started">Upload service started</string>
    <string name="settings_camera_upload_service_stopped">Upload service stopped</string>
    <string name="settings_camera_upload_allow_data_plan">Allow Data Plan</string>
    <string name="settings_camera_upload_allow_videos">Allow Videos to Upload</string>
    <string name="settings_camera_upload_default_wifi">Use Wi-Fi only by default</string>
    <string name="settings_camera_upload_data_plan_allowed">Data plan allowed</string>
    <string name="settings_camera_upload_default_photos">Upload photos only by default</string>
    <string name="settings_camera_upload_videos_allowed">Videos included</string>
    <string name="settings_camera_upload_change_repo_title">Change Upload Library</string>
    <string name="settings_camera_upload_repo_hint">Please choose a library first</string>
    <string name="settings_camera_upload_turn_on">Turn on Camera Upload</string>
    <string name="settings_camera_upload_choose_dir">Change albums</string>
    <string name="settings_camera_upload_dir_auto_scan">Auto scan photos by default</string>
    <string name="settings_camera_upload_advanced_feature_title">Advanced Options</string>
    <string name="settings_camera_upload_advanced_feature_subtitle">Custom upload options</string>
    <string name="settings_camera_upload_advanced_custom_directories">Custom Upload Albums</string>
    <string name="settings_camera_upload_advanced_custom_directories_on">Pick photo albums</string>
    <string name="settings_camera_upload_advanced_custom_directories_off">Auto scan device</string>
    <string name="settings_about_title">ABOUT</string>
    <string name="settings_about_privacy_policy">Privacy Policy</string>
    <string name="settings_about_version_title">App Version</string>
    <string name="settings_about_author_title">About the author</string>
    <string name="settings_advance_feature_title">ADVANCED FEATURES</string>
    <string name="settings_storage_title">CACHE STORAGE</string>
    <string name="settings_cache_title">Cache size</string>
    <string name="settings_clear_cache_title">Clear cache</string>
    <string name="settings_cache_location_title">Cache storage location</string>
    <string name="search_menu_item">Search</string>
    <string name="unstar">Unstar</string>
    <string name="enc_on">Decrypt data locally</string>
    <string name="enc_off">Decrypt data on server side</string>
    <string name="enc_title">Encrypted library data decryption mode</string>
    <string name="clear_password_title">Clear library password</string>
    <string name="clear_password_hint">Click to clear password</string>
    <string name="camera_upload_state">Upload Info</string>
    <string name="settings_folder_backup_info_title">Backup folder</string>
    <string name="settings_folder_backup_switch_title">Turn on Folder Backup</string>
    <string name="settings_folder_backup_service_started">Backup service started</string>
    <string name="settings_folder_backup_service_stopped">Backup service stopped</string>
    <string name="settings_folder_backup_select_hint">0</string>
    <string name="settings_folder_backup_select_title">Selected backup folders</string>
    <string name="settings_folder_backup_traffic">Backup mode</string>
    <string name="settings_folder_backup_traffic_hint">WIFI</string>
    <string name="settings_folder_backup_library">Library backup to</string>
    <string name="folder_backup_waiting_state">Done</string>
    <string name="folder_backup_state">Folder backup info</string>
    <string name="folder_backup_select_repo_hint">Select a library</string>
    <string name="menu_action_view_and_sort">View and sort</string>
</resources>