<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/star"
        android:icon="@drawable/baseline_fav_filled"
        android:title="@string/file_action_star" />

    <item
        android:id="@+id/unstar"
        android:icon="@drawable/baseline_fav_outline"
        android:title="@string/unstar" />

    <item
        android:id="@+id/share"
        android:icon="@drawable/baseline_share"
        android:title="@string/file_share" />

    <item
        android:id="@+id/export"
        android:icon="@drawable/action_export"
        android:title="@string/file_action_export" />

    <item
        android:id="@+id/rename"
        android:icon="@drawable/baseline_edit_rename"
        android:title="@string/file_action_rename" />

    <item
        android:id="@+id/delete"
        android:icon="@drawable/baseline_delete"
        android:title="@string/file_action_delete" />

    <item
        android:id="@+id/copy"
        android:icon="@drawable/baseline_copy"
        android:title="@string/file_action_copy" />

    <item
        android:id="@+id/move"
        android:icon="@drawable/baseline_move"
        android:title="@string/file_action_move" />

    <item
        android:id="@+id/upload"
        android:icon="@drawable/baseline_upload"
        android:title="@string/file_action_update" />

    <item
        android:id="@+id/download"
        android:icon="@drawable/baseline_download"
        android:title="@string/file_action_download" />

    <item
        android:id="@+id/open_with"
        android:icon="@drawable/action_open"
        android:title="@string/file_action_open" />

    <item
        android:id="@+id/save_as"
        android:icon="@drawable/baseline_save_as_24"
        android:title="@string/file_action_save_as" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/baseline_properties"
        android:title="@string/file_action_profile" />
</menu>