<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/share"
        android:icon="@drawable/action_share"
        android:title="@string/file_share"/>

    <item
        android:id="@+id/export"
        android:icon="@drawable/action_export"
        android:title="@string/file_action_export" />

    <item
        android:id="@+id/open"
        android:icon="@drawable/action_open"
        android:title="@string/file_action_open"/>


    <group android:id="@+id/group_manage">
        <item
            android:id="@+id/star"
            android:icon="@drawable/star_normal"
            android:title="@string/file_action_star" />
        <item
            android:id="@+id/rename"
            android:icon="@drawable/action_rename"
            android:title="@string/file_action_rename" />
        <item
            android:id="@+id/delete"
            android:icon="@drawable/action_delete"
            android:title="@string/file_action_delete" />
        <item
            android:id="@+id/copy"
            android:icon="@drawable/action_copy"
            android:title="@string/file_action_copy" />
        <item
            android:id="@+id/move"
            android:icon="@drawable/action_move"
            android:title="@string/file_action_move" />
    </group>
    <group android:id="@+id/group_update">
        <item
            android:id="@+id/update"
            android:icon="@drawable/action_update"
            android:title="@string/file_action_update" />
        <item
            android:id="@+id/download"
            android:icon="@drawable/action_download"
            android:title="@string/file_action_download" />
    </group>
</menu>