<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_action_search"
        android:icon="@drawable/icon_search"
        android:title="@string/search_menu_item"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/menu_action_sort"
        android:icon="@drawable/icon_sort"
        android:title="@string/menu_action_view_and_sort"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/create_repo"
        android:title="@string/add_repo"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/create_file"
        android:title="@string/create_new_file"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/create_folder"
        android:title="@string/create_new_dir"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/upload_file"
        android:title="@string/upload_file"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/take_photo"
        android:title="@string/take_photo"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/select"
        android:title="@string/select"
        android:visible="true"
        app:showAsAction="never" />
</menu>
