<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/edit"
        android:icon="@drawable/baseline_more_vert_24"
        android:title="@string/tabs_library"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/directory"
        android:icon="@drawable/baseline_more_vert_24"
        android:title="@string/tabs_starred"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/baseline_more_vert_24"
        android:title="@string/tabs_activity"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/comments"
        android:icon="@drawable/baseline_more_vert_24"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
</menu>